# sidre

./: .devcontainer.json  .dockerignore  .gitignore  API.md  Cargo.toml  README.md  TODO.md  bors.toml  cert.pem  clippy.toml  docker-compose.vscode.yaml  docker-compose.yaml  key.der  key.pem  rustfmt.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot.yml  prost-sled.yml  release.yml  rust.yml  sidre.yml  test-service-provider.yml
data/: sp_metadata.xml
docker/: Dockerfile.dev  Dockerfile.release  Dockerfile.sp  Dockerfile.test  Dockerfile.vscode
hooks/: pre-commit  setup
integration-test/: Dockerfile  jest-playwright.config.js  package.json  tsconfig.json
integration-test/tests/: login.test.ts
migrations/: 20201001105649_init.sql
prost-sled/: Cargo.toml  README.md  build.rs
prost-sled/src/: lib.rs  messages.proto
rust-xmlsec/: Cargo.toml
rust-xmlsec/examples/: signature.rs
rust-xmlsec/src/: error.rs  templates.rs  xmldsig.rs  xmlsec.rs
rust-xmlsec/src/exts/: xml.rs
rust-xmlsec/tests/: test_keys.rs
samael/: Cargo.toml
samael/src/: crypto.rs  lib.rs  service_provider.rs
samael/src/idp/: mod.rs  response_builder.rs  sp_extractor.rs  tests.rs  verified_request.rs
samael/src/metadata/: entity_descriptor.rs  mod.rs
samael/src/schema/: authn_request.rs  response.rs
scripts/: migrate.sh  sqlx-prepare.sh  todo.sh
sidre/: Cargo.toml  build.rs  sqlx-data.json
sidre/migrations/: 20201001105649_init.sql  20201025035659_idp_config.sql
sidre/protos/: sidre.proto
sidre/src/: config.rs  db.rs  error.rs  generation.rs  identity_provider.rs  idp.rs  lib.rs  login.rs  main.rs  ping.rs  service_provider.rs  x509.rs
sidre/src/store/: memory.rs  mod.rs  persistent.rs
sidre/templates/: assertion.xml  form.html
sidre/test-data/: saml_request_signed.xml  saml_response_signed_assertion.xml  saml_response_signed_message.xml  saml_response_signed_message_and_assertion.xml  service_provider_metadata.xml
src/: c14n.rs  config.rs  crypto.rs  db.rs  error.rs  identity_provider.rs  keys.rs  lib.rs  login.rs  main.rs  service_provider.rs  templates.rs  x509.rs
src/idp/: mod.rs  tests.rs  verified_request.rs
src/metadata/: entity_descriptor.rs  mod.rs
templates/: assertion.xml  metadata.xml  response.xml
test-service-provider/: Dockerfile  Makefile  README.md  app.py  entrypoint.py  requirements.txt
test-service-provider/saml/: advanced_settings.json  settings.json
test-service-provider/saml/certs/: sp.crt  sp.key
test-service-provider/templates/: attrs.html  base.html  index.html
tests/: test_dsig.rs
xtask/: Cargo.toml  rustfmt.toml
xtask/src/: main.rs
