[package]
name = "sidre"
version = "0.1.0"
authors = ["Nick Spain <nicholas.spain@stileeducation.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
tracing = "0.1.21"
tracing-subscriber = "0.2.12"
askama = "0.10.3"
chrono = "0.4.18"
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid", "chrono" ] }
openssl = "0.10.30"
thiserror = "1.0.20"
base64 = "0.12.3"
serde = "1.0.116"
flate2 = "1.0.17"
roxmltree = "0.13.0"
bytes = "0.5.6"

[dev-dependencies]
rand = "0.7.3"
