[package]
name = "prost-sled"
version = "0.0.4"
authors = ["Nick Spain <nicholas.spain96@gmail.com>"]
edition = "2018"
description = "Integration layer between prost and sled."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nick96/sidre/tree/main/prost-sled"
repository = "https://github.com/nick96/sidre"
readme = "README.md"
keywords = ["prost", "sled"]
categories = []


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.7.0"
sled = "0.34.6"
thiserror = "1.0.23"

[build-dependencies]
prost-build = "0.11.1"

[dev-dependencies]
anyhow = "1.0.37"
once_cell = "1.5.2"
rand = "0.8.0"
