[package]
name = "samael"
version = "0.0.8"
authors = ["Nathan Jaremko <nathan@jaremko.ca>", "Alex Grinman <me@alexgr.in>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/njaremko/samael"
description = "A SAML2 library for Rust"
keywords = ["saml", "saml2", "xml", "sso"]
categories = ["authentication"]

[features]
usexmlsec = ["xmlsec", "libxml"]

[dependencies]
openssl = "0.10"
openssl-sys = "0.9"
openssl-probe = "0.1.2"
url = "2.1.1"
quick-xml = { version = "0.17.2", features = [ "serialize" ] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.12"
flate2 = "1.0"
snafu = "0.6"
rand = "0.7"
derive_builder = "0.9.0"
uuid = { version = "0.8.1", features = ["v4"] }
data-encoding = "2.2.0"
xmlsec = { path = "../rust-xmlsec", optional = true }
libxml = { version = "0.2.15", optional = true }
