[package]
name = "sidre"
version = "0.0.1"
authors = ["Nick Spain <nicholas.spain96@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"


[dependencies]
tokio = { version = "0.3", features = ["full"] }
warp = "0.2"
tracing = "0.1.21"
tracing-subscriber = "0.2.15"
chrono = "0.4.18"
sqlx = { version = "0.4.0", features = [ "runtime-tokio", "macros", "postgres", "uuid", "chrono", "offline" ] }
thiserror = "1.0.22"
base64 = "0.13.0"
serde = "1.0.116"
flate2 = "1.0.19"
bytes = "0.6.0"
tracing-futures = "0.2.4"
uuid = {version = "0.8.1", features = ["v4"]}
rand = "0.7.3"
samael = { git = "https://github.com/nick96/samael", rev = "59fe9f762d72865ea9f8fdde888f6f211e894eb8", features = ["usexmlsec"] }
askama = "0.10.5"
serde_json = "1.0.59"

[dev-dependencies]
roxmltree = "0.13.0"
sha2 = "0.9.2"
