[package]
name = "sidre"
description = "A SAML identity provider factory for dev and test"
version = "0.0.1"
authors = ["Nick Spain <nicholas.spain96@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nick96/sidre"
repository = "https://github.com/nick96/sidre"
readme = "../README.md"
keywords = ["saml", "identity-provider", "idp"]
categories = ["development-tools"]

[features]
default = ["data-in-memory"]
# Store all data in memory. This makes sidre easier to run, you can just spin
# up the docker container and not worry about a database. Which is probably
# easier for CI. For your development environment, you may prefer presisting
# data using the `persistent` feature.
data-in-memory = ["sled", "prost", "prost-build", "glob", "prost-sled"]
# Persist all data to the postgres database identified by the environment variable
# DATBASE_URL.
# postgres-persistent = ["sqlx"]


[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.2"
tracing = "0.1.22"
tracing-subscriber = "0.2.15"
chrono = "0.4.18"
# sqlx = { version = "0.4.2", features = [ "runtime-tokio-native-tls", "macros", "postgres", "uuid", "chrono", "offline" ], optional = true }
thiserror = "1.0.23"
base64 = "0.13.0"
serde = "1.0.118"
flate2 = "1.0.19"
tracing-futures = "0.2.4"
uuid = {version = "0.8.1", features = ["v4"]}
rand = "0.8.0"
samael = { git = "https://github.com/nick96/samael", rev = "59fe9f762d72865ea9f8fdde888f6f211e894eb8", features = ["usexmlsec"] }
askama = "0.10.5"
serde_json = "1.0.61"
bytes = "0.5.6"
anyhow = "1.0.34"
async-trait = "0.1.42"
sled = { version = "0.34.6",  optional = true }
prost = { version = "0.7.0", optional = true }
prost-sled = { path = "../prost-sled", optional = true }

[build-dependencies]
prost-build = { version = "0.7.0", optional = true }
glob = { version = "0.3.0", optional = true }

[dev-dependencies]
roxmltree = "0.14.0"
sha2 = "0.9.2"
once_cell = "1.5.2"
uuid = { version = "0.8.1", features = ["v4"] }
pretty_assertions = "0.6.1"
