[package]
name = "sidre"
description = "A SAML identity provider factory for dev and test"
version = "0.0.1"
authors = ["Nick Spain <nicholas.spain96@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nick96/sidre"
repository = "https://github.com/nick96/sidre"
readme = "../README.md"
keywords = ["saml", "identity-provider", "idp"]
categories = ["development-tools"]

[features]
default = ["data-in-memory"]
# Store all data in memory. This makes sidre easier to run, you can just spin
# up the docker container and not worry about a database. Which is probably
# easier for CI. For your development environment, you may prefer presisting
# data using the `persistent` feature.
data-in-memory = ["prost", "prost-build", "glob", "prost-sled"]
# Persist all data to the postgres database identified by the environment variable
# DATBASE_URL.
# postgres-persistent = ["sqlx"]


[dependencies]
tokio = { version = "1.1.0", features = ["full"] }
warp = { version = "0.3", default-features = false }
tracing = { version = "0.1.22", default-features = false, features = ["std", "attributes"] }
tracing-subscriber = { version = "0.2.15", default-features = false, features = ["fmt", "env-filter"] }
chrono = { version = "0.4.18", default-features = false }
thiserror = { version = "1.0.23", default-features = false }
base64 = { version = "0.13.0", default-features = false, features = ["std"] }
serde = { version = "1.0.118", default-features = false }
flate2 = { version = "1.0.19", default-features = false }
tracing-futures = { version = "0.2.4", default-features = false }
uuid = {version = "0.8.1", features = ["v4"]}
rand = { version = "0.8.0", default-features = false, features = ["std", "std_rng"] }
askama = { version = "0.10.5", default-features = false }
serde_json = { version = "1.0.61", default-features = false }
async-trait = { version = "0.1.42", default-features = false }
pico-args = { version = "0.4.0", default-features = false }
prost = { version = "0.7.0", optional = true, default-features = false }

samael = { path = "../samael", features = ["usexmlsec"], default-features = false }
prost-sled = { path = "../prost-sled", optional = true, default-features = false }

[build-dependencies]
prost-build = { version = "0.7.0", optional = true }
glob = { version = "0.3.0", optional = true }

[dev-dependencies]
roxmltree = "0.14.0"
sha2 = "0.9.2"
once_cell = "1.5.2"
uuid = { version = "0.8.1", features = ["v4"] }
pretty_assertions = "1.3.0"
